// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventAction:drawer 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              打开抽屉
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget __AMIS_COMPONENT_CLASS_PREFIX__Drawer __AMIS_COMPONENT_CLASS_PREFIX__Drawer--right __AMIS_COMPONENT_CLASS_PREFIX__Drawer--md __AMIS_COMPONENT_CLASS_PREFIX__Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-overlay in"
    />
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-content in"
    >
      <a
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-close"
      >
        <icon-mock
          class="icon icon-close"
          icon="close"
        />
      </a>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-header"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-title"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              模态抽屉
            </span>
          </span>
        </div>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-body"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner-overlay in"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner __AMIS_COMPONENT_CLASS_PREFIX__Spinner--overlay in"
          data-testid="spinner"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon __AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon--lg __AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon--default"
          />
        </div>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              打开抽屉
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer 3`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              打开抽屉
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer 4`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              打开抽屉
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer 5`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              打开抽屉
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer 6`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              打开抽屉
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer 7`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              打开抽屉
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer args 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              打开抽屉
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="amis-dialog-widget __AMIS_COMPONENT_CLASS_PREFIX__Drawer __AMIS_COMPONENT_CLASS_PREFIX__Drawer--right __AMIS_COMPONENT_CLASS_PREFIX__Drawer--md __AMIS_COMPONENT_CLASS_PREFIX__Modal--1th"
    data-amis-theme="cxd"
    role="dialog"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-overlay in"
    />
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-content in"
    >
      <a
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-close"
      >
        <icon-mock
          class="icon icon-close"
          icon="close"
        />
      </a>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-header"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-title"
        >
          <span
            class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              模态抽屉
            </span>
          </span>
        </div>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-body"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner-overlay in"
        />
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner __AMIS_COMPONENT_CLASS_PREFIX__Spinner--overlay in"
          data-testid="spinner"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon __AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon--lg __AMIS_COMPONENT_CLASS_PREFIX__Spinner-icon--default"
          />
        </div>
      </div>
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Drawer-footer"
      >
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--primary __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="button"
        >
          <span>
            确认
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer args 2`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              打开抽屉
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer args 3`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              打开抽屉
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer args 4`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              打开抽屉
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer args 5`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              打开抽屉
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer args 6`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              打开抽屉
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventAction:drawer args 7`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Page"
    data-amis-theme="cxd"
  >
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <button
            class="__AMIS_COMPONENT_CLASS_PREFIX__Button __AMIS_COMPONENT_CLASS_PREFIX__Button--default __AMIS_COMPONENT_CLASS_PREFIX__Button--size-default"
            type="button"
          >
            <span>
              打开抽屉
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
